--- a/20250812_emotkiflagi.html
+++ b/20250812_emotkiflagi.html
@@ -177,7 +177,7 @@
   {emoji:'🇨🇽', pl:'Wyspa Bożego Narodzenia', en:'Christmas Island', others:['Flying Fish Cove','christmas','xmas island', 'wbn']},
   {emoji:'🇨🇾', pl:'Cypr', en:'Cyprus', others:['Nikozja','cypriot','cypruss']},
   {emoji:'🇨🇿', pl:'Czechy', en:'Czech Republic', others:['Praga','czech','chech']},
-  {emoji:'🇩🇯', pl:'Dżibuti', en:'Djibouti', others:['Dżibuti','djiboutian','jibuti']},
+  {emoji:'🇩🇯', pl:'Dżibuti', en:'Djibouti', others:['Dżibuti','djiboutian','jibuti', 'dżibutti']},
   {emoji:'🇩🇰', pl:'Dania', en:'Denmark', others:['Kopenhaga','danish','denmak']},
   {emoji:'🇩🇲', pl:'Dominika', en:'Dominica', others:['Roseau','dominican','dominika']},
   {emoji:'🇩🇴', pl:'Dominikana', en:'Dominican Republic', others:['Santo Domingo','dominican','dominicana']},
@@ -187,7 +187,7 @@
   {emoji:'🇪🇬', pl:'Egipt', en:'Egypt', others:['Kair','egyptian','egipt']},
   {emoji:'🇪🇭', pl:'Sahara Zachodnia', en:'Western Sahara', others:['Laayoune','sahrawi','west sahara', 'sahara']},
   {emoji:'🇪🇹', pl:'Etiopia', en:'Ethiopia', others:['Addis Abeba','ethiopian','etiopa']},
-  {emoji:'🇪🇺', pl:'Unia Europejska', en:'European Union', others:['Bruksela','eu','eurpean union', 'europa']},
+  {emoji:'🇪🇺', pl:'Unia Europejska', en:'European Union', others:['Bruksela','eu','eurpean union', 'europa', 'ue']},
   {emoji:'🇫🇮', pl:'Finlandia', en:'Finland', others:['Helsinki','finnish','finlandd']},
   {emoji:'🇫🇯', pl:'Fidżi', en:'Fiji', others:['Suva','fijian','fijji']},
   {emoji:'🇫🇴', pl:'Wyspy Owcze', en:'Faroe Islands', others:['Tórshavn','faroese','faro islands', 'owce']},
@@ -195,9 +195,9 @@
   {emoji:'🇬🇧', pl:'Wielka Brytania', en:'United Kingdom', others:['Londyn','british','uk','england','great britain']},
   {emoji:'🇬🇩', pl:'Grenada', en:'Grenada', others:['Saint George’s','grenadian','greneda']},
   {emoji:'🇬🇪', pl:'Gruzja', en:'Georgia', others:['Tbilisi','georgian','gruzia']},
-  {emoji:'🇬🇫', pl:'Gujana Francuska', en:'French Guiana', others:['Kajenna','french guiana','gujana francuska', 'francja']},
+  {emoji:'🇬🇫', pl:'Gujana Francuska', en:'French Guiana', others:['Kajenna','french guiana','gujana francuska', 'francja', 'gujana']},
   {emoji:'🇬🇭', pl:'Ghana', en:'Ghana', others:['Akra','ghanaian','gana']},
-  {emoji:'🇬🇮', pl:'Gibraltar', en:'Gibraltar', others:['gibraltarian','gibralter']},
+  {emoji:'🇬🇮', pl:'Gibraltar', en:'Gibraltar', others:['gibraltarian','gibralter', 'giblartar']},
   {emoji:'🇬🇱', pl:'Grenlandia', en:'Greenland', others:['Nuuk','greenlander','greenlnd']},
   {emoji:'🇬🇲', pl:'Gambia', en:'Gambia', others:['Bandżul','gambian','gambiaa']},
   {emoji:'🇬🇳', pl:'Gwinea', en:'Guinea', others:['Konakry','guinean','guiena']},
@@ -226,7 +226,7 @@
   {emoji:'🇰🇬', pl:'Kirgistan', en:'Kyrgyzstan', others:['Biszkek','kyrgyz','kirgizstan']},
   {emoji:'🇰🇭', pl:'Kambodża', en:'Cambodia', others:['Phnom Penh','cambodian','cambodza']},
   {emoji:'🇰🇲', pl:'Komory', en:'Comoros', others:['Moroni','comorian','komoros']},
-  {emoji:'🇰🇳', pl:'Saint Kitts i Nevis', en:'Saint Kitts and Nevis', others:['Basseterre','kitts','nevis', 'kit']},
+  {emoji:'🇰🇳', pl:'Saint Kitts i Nevis', en:'Saint Kitts and Nevis', others:['Basseterre','kitts','nevis', 'kit', 'skin', 'skn']},
   {emoji:'🇰🇵', pl:'Korea Północna', en:'North Korea', others:['Pjongjang','north korean','dprk', 'korea']},
   {emoji:'🇰🇷', pl:'Korea Południowa', en:'South Korea', others:['Seul','south korean','rok', 'korea']},
   {emoji:'🇰🇼', pl:'Kuwejt', en:'Kuwait', others:['Kuwejt City','kuwaiti','kuweit']},
@@ -265,7 +265,7 @@
   {emoji:'🇳🇦', pl:'Namibia', en:'Namibia', others:['Windhuk','namibian','namibya']},
   {emoji:'🇳🇪', pl:'Niger', en:'Niger', others:['Niamey','nigerien','nigger']},
   {emoji:'🇳🇬', pl:'Nigeria', en:'Nigeria', others:['Abudża','nigerian','nigeriaa']},
-  {emoji:'🇳🇮', pl:'Nikaragua', en:'Nicaragua', others:['Managua','nicaraguan','nikaraguaa']},
+  {emoji:'🇳🇮', pl:'Nikaragua', en:'Nicaragua', others:['Managua','nicaraguan','nikaraguaa', 'salwador']},
   {emoji:'🇳🇱', pl:'Holandia', en:'Netherlands', others:['Amsterdam','dutch','holland', 'niderland', 'niderlandia', 'niderlandy']},
   {emoji:'🇳🇴', pl:'Norwegia', en:'Norway', others:['Oslo','norwegian','norwey']},
   {emoji:'🇳🇵', pl:'Nepal', en:'Nepal', others:['Katmandu','nepali','neepal', 'everest']},
@@ -281,7 +281,7 @@
   {emoji:'🇵🇾', pl:'Paragwaj', en:'Paraguay', others:['Asunción','paraguayan','paragway']},
   {emoji:'🇶🇦', pl:'Katar', en:'Qatar', others:['Doha','qatari','quatar']},
   {emoji:'🇷🇪', pl:'Reunion', en:'Réunion', others:['Saint-Denis','reunionese','reunion island', 'francja']},
-  {emoji:'🇷🇴', pl:'Rumunia', en:'Romania', others:['Bukareszt','czad','chad']}, // podobna flaga do Czadu
+  {emoji:'🇷🇴', pl:'Rumunia', en:'Romania', others:['Bukareszt','czad','chad']},
   {emoji:'🇷🇸', pl:'Serbia', en:'Serbia', others:['Belgrad','serbian','serbiaa']},
   {emoji:'🇷🇺', pl:'Rosja', en:'Russia', others:['Moskwa','russian','rossiya']},
   {emoji:'🇷🇼', pl:'Rwanda', en:'Rwanda', others:['Kigali','rwandan','ruanda']},
@@ -300,7 +300,7 @@
   {emoji:'🇸🇷', pl:'Surinam', en:'Suriname', others:['Paramaribo','surinamese','surinamee']},
   {emoji:'🇸🇸', pl:'Sudan Południowy', en:'South Sudan', others:['Dżuba','south sudanese','southern sudan', 'sudan']},
   {emoji:'🇸🇹', pl:'Wyspy Świętego Tomasza i Książęca', en:'São Tomé and Príncipe', others:['São Tomé','sao tome','principe', 'wstik', 'tomasz', 'ksiaze']},
-  {emoji:'🇸🇻', pl:'Salwador', en:'El Salvador', others:['San Salvador','salvadoran','elsalvador']},
+  {emoji:'🇸🇻', pl:'Salwador', en:'El Salvador', others:['San Salvador','salvadoran','elsalvador', 'nikaragua']},
   {emoji:'🇸🇾', pl:'Syria', en:'Syria', others:['Damaszek','syrian','syriya']},
   {emoji:'🇹🇩', pl:'Czad', en:'Chad', others:['Ndżamena','czad','rumunia']}, // podobna flaga do Rumunii
   {emoji:'🇹🇬', pl:'Togo', en:'Togo', others:['Lome','togolese','togoo']},
@@ -338,54 +338,54 @@
   {emoji:'🇿🇼', pl:'Zimbabwe', en:'Zimbabwe', others:['Harare','zimbabwean','zimbabue']}
      ],
      hard:[
-  {emoji:'🇦🇨', pl:'Wyspa Wniebowstąpienia', en:'Ascension Island', others:['Georgetown','ascension','asencion', 'wniebowstopienie', 'niebo']},
-  {emoji:'🇦🇮', pl:'Anguilla', en:'Anguilla', others:['The Valley','anguillan','anguila']},
+  {emoji:'🇦🇨', pl:'Wyspa Wniebowstąpienia', en:'Ascension Island', others:['Georgetown','ascension','asencion', 'wniebowstopienie', 'niebo', 'uk']},
+  {emoji:'🇦🇮', pl:'Anguilla', en:'Anguilla', others:['The Valley','anguillan','anguila', 'uk']},
   {emoji:'🇦🇸', pl:'Samoa Amerykańskie', en:'American Samoa', others:['Pago Pago','samoan','amercan samoa', 'samoa']},
   {emoji:'🇦🇼', pl:'Aruba', en:'Aruba', others:['Oranjestad','aruban','arubba']},
   {emoji:'🇦🇽', pl:'Wyspy Alandzkie', en:'Åland Islands', others:['Mariehamn','aland','aland islands', 'alandy']},
   {emoji:'🇧🇮', pl:'Burundi', en:'Burundi', others:['Gitega','burundian','burndy']},
-  {emoji:'🇧🇱', pl:'Saint-Barthélemy', en:'Saint Barthélemy', others:['Gustavia','barths','saint barthelemy', 'saint']},
+  {emoji:'🇧🇱', pl:'Saint-Barthélemy', en:'Saint Barthélemy', others:['Gustavia','barths','saint barthelemy', 'saint', 'bartek']},
   {emoji:'🇧🇳', pl:'Brunei', en:'Brunei', others:['Bandar Seri Begawan','bruneian','bruney', 'bruno']},
   {emoji:'🇧🇶', pl:'Bonaire, Sint Eustatius i Saba', en:'Bonaire, Sint Eustatius and Saba', others:['Kralendijk','bonaire','bonnaire', 'bono']},
   {emoji:'🇧🇹', pl:'Bhutan', en:'Bhutan', others:['Thimphu','bhutanese','butan']},
   {emoji:'🇧🇿', pl:'Belize', en:'Belize', others:['Belmopan','belizean','belizee', 'blaiz', 'blitz']},
-  {emoji:'🇨🇰', pl:'Wyspy Cooka', en:'Cook Islands', others:['Avarua','cook','cookislands', 'gotuj']},
-  {emoji:'🇩🇬', pl:'Diego Garcia', en:'Diego Garcia', others:['diego','diago', 'garcia']},
+  {emoji:'🇨🇰', pl:'Wyspy Cooka', en:'Cook Islands', others:['Avarua','cook','cookislands', 'gotuj','uk']},
+  {emoji:'🇩🇬', pl:'Diego Garcia', en:'Diego Garcia', others:['diego','diago', 'garcia', 'uk']},
   {emoji:'🇪🇷', pl:'Erytrea', en:'Eritrea', others:['Asmara','eritrean','eritra']},
-  {emoji:'🇫🇰', pl:'Falklandy', en:'Falkland Islands', others:['Stanley','falklander','falklands']},
+  {emoji:'🇫🇰', pl:'Falklandy', en:'Falkland Islands', others:['Stanley','falklander','falklands', 'uk']},
   {emoji:'🇫🇲', pl:'Mikronezja', en:'Micronesia', others:['Palikir','micronesian','micronisia']},
   {emoji:'🇬🇬', pl:'Guernsey', en:'Guernsey', others:['Saint Peter Port','guernseyman','guernsy']},
-  {emoji:'🇬🇸', pl:'Georgia Południowa i Sandwich Południowy', en:'South Georgia and the South Sandwich Islands', others:['King Edward Point','south georgia','sgssi', 'kanapka', 'georgia', 'sandwich']},
+  {emoji:'🇬🇸', pl:'Georgia Południowa i Sandwich Południowy', en:'South Georgia and the South Sandwich Islands', others:['King Edward Point','south georgia','sgssi', 'kanapka', 'georgia', 'sandwich', 'uk']},
   {emoji:'🇬🇺', pl:'Guam', en:'Guam', others:['Hagåtña','guamanian','guuam']},
   {emoji:'🇬🇼', pl:'Gwinea Bissau', en:'Guinea-Bissau', others:['Bissau','bissauan','guinea bissao', 'gwinea']},
   {emoji:'🇮🇲', pl:'Wyspa Man', en:'Isle of Man', others:['Douglas','manx','isle man', 'man', 'spiderman']},
-  {emoji:'🇮🇴', pl:'Brytyjskie Terytorium Oceanu Indyjskiego', en:'British Indian Ocean Territory', others:['Diego Garcia','british indian ocean','biot', 'brytania']},
+  {emoji:'🇮🇴', pl:'Brytyjskie Terytorium Oceanu Indyjskiego', en:'British Indian Ocean Territory', others:['Diego Garcia','british indian ocean','biot', 'brytania', 'uk']},
   {emoji:'🇯🇪', pl:'Jersey', en:'Jersey', others:['Saint Helier','jerseyman','jerzey']},
   {emoji:'🇰🇮', pl:'Kiribati', en:'Kiribati', others:['Tarawa','kiribatian','kiribaty']},
-  {emoji:'🇰🇾', pl:'Kajmany', en:'Cayman Islands', others:['George Town','caymanian','cayman']},
+  {emoji:'🇰🇾', pl:'Kajmany', en:'Cayman Islands', others:['George Town','caymanian','cayman', 'uk']},
   {emoji:'🇱🇨', pl:'Saint Lucia', en:'Saint Lucia', others:['Castries','lucian','st lucia', 'lucia', 'luis']},
   {emoji:'🇲🇲', pl:'Mjanma', en:'Myanmar', others:['Naypyidaw','burmese','burma']},
   {emoji:'🇲🇵', pl:'Mariany Północne', en:'Northern Mariana Islands', others:['Saipan','northern marianas','cnmi', 'marian', 'mariany']},
   {emoji:'🇳🇨', pl:'Nowa Kaledonia', en:'New Caledonia', others:['Nouméa','caledonian','noumea', 'kaledonia']},
   {emoji:'🇳🇫', pl:'Norfolk', en:'Norfolk Island', others:['Kingston','norfolk islander','norfolc']},
   {emoji:'🇳🇷', pl:'Nauru', en:'Nauru', others:['Yaren','nauruan','nauru island']},
-  {emoji:'🇳🇺', pl:'Niue', en:'Niue', others:['Alofi','niuean','niuue']},
+  {emoji:'🇳🇺', pl:'Niue', en:'Niue', others:['Alofi','niuean','niuue', 'uk']},
   {emoji:'🇵🇫', pl:'Polinezja Francuska', en:'French Polynesia', others:['Papeete','tahitian','polinesia', 'francja']},
   {emoji:'🇵🇲', pl:'Saint-Pierre i Miquelon', en:'Saint Pierre and Miquelon', others:['Saint-Pierre','spm','miquelon', 'pierre', 'miquelon']},
-  {emoji:'🇵🇳', pl:'Pitcairn', en:'Pitcairn Islands', others:['Adamstown','pitcairner','pitcarn']},
-  {emoji:'🇸🇭', pl:'Wyspa Świętej Heleny', en:'Saint Helena', others:['Jamestown','st helena','saint helena', 'wsh', 'helena']},
+  {emoji:'🇵🇳', pl:'Pitcairn', en:'Pitcairn Islands', others:['Adamstown','pitcairner','pitcarn', 'uk']},
+  {emoji:'🇸🇭', pl:'Wyspa Świętej Heleny', en:'Saint Helena', others:['Jamestown','st helena','saint helena', 'wsh', 'helena', 'uk']},
   {emoji:'🇸🇽', pl:'Sint Maarten', en:'Sint Maarten', others:['Philipsburg','dutch sint maarten','st maarten', 'maarten', 'martin']},
   {emoji:'🇸🇿', pl:'Eswatini', en:'Eswatini', others:['Mbabane','swazi','swaziland']},
-  {emoji:'🇹🇦', pl:'Tristan da Cunha', en:'Tristan da Cunha', others:['Edinburgh of the Seven Seas','tristan','tda cunha', 'tdc', 'cunha']},
-  {emoji:'🇹🇨', pl:'Turks i Caicos', en:'Turks and Caicos Islands', others:['Cockburn Town','tc islands','turks caicos', 'tic', 'turks']},
+  {emoji:'🇹🇦', pl:'Tristan da Cunha', en:'Tristan da Cunha', others:['Edinburgh of the Seven Seas','tristan','tda cunha', 'tdc', 'cunha', 'uk']},
+  {emoji:'🇹🇨', pl:'Turks i Caicos', en:'Turks and Caicos Islands', others:['Cockburn Town','tc islands','turks caicos', 'tic', 'turks', 'uk']},
   {emoji:'🇹🇫', pl:'Francuskie Terytoria Południowe', en:'French Southern Territories', others:['Port-aux-Français','ftd','french southern', 'francja']},
   {emoji:'🇹🇰', pl:'Tokelau', en:'Tokelau', others:['Fakaofo','tokelauan','tokelou']},
   {emoji:'🇹🇱', pl:'Timor Wschodni', en:'Timor-Leste', others:['Dili','east timor','timorleste', 'timor']},
-  {emoji:'🇹🇻', pl:'Tuvalu', en:'Tuvalu', others:['Funafuti','tuvaluan','tuvaloo']},
-  {emoji:'🇻🇬', pl:'Brytyjskie Wyspy Dziewicze', en:'British Virgin Islands', others:['Road Town','bvi','british virgin', 'british', 'brytania']},
+  {emoji:'🇹🇻', pl:'Tuvalu', en:'Tuvalu', others:['Funafuti','tuvaluan','tuvaloo', 'uk']},
+  {emoji:'🇻🇬', pl:'Brytyjskie Wyspy Dziewicze', en:'British Virgin Islands', others:['Road Town','bvi','british virgin', 'british', 'brytania', 'uk']},
   {emoji:'🇻🇮', pl:'Wyspy Dziewicze Stanów Zjednoczonych', en:'United States Virgin Islands', others:['Charlotte Amalie','usvi','us virgin', 'usa']},
   {emoji:'🇻🇺', pl:'Vanuatu', en:'Vanuatu', others:['Port Vila','ni-vanuatu','vanuatua']},
-  {emoji:'🇼🇫', pl:'Wallis i Futuna', en:'Wallis and Futuna', others:['Mata-Utu','wallisian','futunan', 'wallis', 'fatuna']},
+  {emoji:'🇼🇫', pl:'Wallis i Futuna', en:'Wallis and Futuna', others:['Mata-Utu','wallisian','futunan', 'wallis', 'fatuna', 'francja']},
   {emoji:'🇼🇸', pl:'Samoa', en:'Samoa', others:['Apia','samoan','western samoa']},
   {emoji:'🇾🇹', pl:'Majotta', en:'Mayotte', others:['Mamoudzou','mahoran','mayotta']}
      ]
