--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -24,10 +24,6 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
                 <span>Flagi</span>
             </a>
-            <a href="20250809_goldrun.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
-                <span>Gold Run</span>
-            </a>
             <a href="20250809_ufo.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
                 <span>Ufo</span>
@@ -35,6 +31,10 @@
             <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
+            </a>
+            <a href="20250901_szkola.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
+                <span>Szkoła 3</span>
             </a>
             <a href="gry.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
