--- a/20250904_podzialstrony.html
+++ b/20250904_podzialstrony.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podział Strony</title>
-    <link rel="icon" href="obrazek.png" type="image/png">
+    <link rel="icon" href="https://res.cloudinary.com/diljpkw9f/image/upload/v1756997231/obrazek_d0c91w.png" type="image/png">
     <style>
         body {
             width: 800px;
