--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -44,6 +44,6 @@
             </table>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="20250904_skrypt.js"></script>
 </body>
 </html>
