--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,35 +121,124 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'🔌', pl:'Wtyczka', en:'Plug', others:['plugg', 'electric plug', 'wtyczkka']},
+  {emoji:'🧮', pl:'Liczydło', en:'Abacus', others:['abacus tool', 'abacus device', 'liczydlo']},
+  {emoji:'⚖️', pl:'Waga', en:'Scale', others:['scail', 'balance scale', 'waga']},
+  {emoji:'🛒', pl:'Wuzek na Zakupy', en:'Shopping Cart', others:['shoping cart', 'trolley', 'wuzek na zakupy']},
+  {emoji:'🛍️', pl:'Torby na Zakupy', en:'Shopping Bags', others:['shoping bags', 'carry bags', 'torby na zakupy', 'bag', 'bags']},
+  {emoji:'🕯️', pl:'Świeczka', en:'Candle', others:['canddle', 'wax candle', 'swieczka']},
+  {emoji:'💡', pl:'Żarówka', en:'Light Bulb', others:['lightbulb', 'bulb lamp', 'zarowka', 'bulb']},
+  {emoji:'🔦', pl:'Latarka', en:'Flashlight', others:['flashlite', 'torch', 'latarka']},
+  {emoji:'🏮', pl:'Lampion', en:'Lantern', others:['paper lamp', 'light lantern', 'Laterne']},
+  {emoji:'🧱', pl:'Cegła', en:'Brick', others:['stone block', 'building brick', 'Ziegel']},
+  {emoji:'🪠', pl:'Przepychacz do Rur', en:'Plunger', others:['toilet plunger', 'pipe cleaner', 'Pömpel']},
+  {emoji:'🧸', pl:'Pluszowy Miś', en:'Teddy Bear', others:['stuffed bear', 'plush toy', 'Teddybär']},
+  {emoji:'🧷', pl:'Agrafka', en:'Safety Pin', others:['pin', 'metal clasp', 'Sicherheitsnadel']},
+  {emoji:'🪢', pl:'Węzeł', en:'Knot', others:['rope tie', 'loop knot', 'Knoten']},
+  {emoji:'🧹', pl:'Miotła', en:'Broom', others:['brush', 'sweeper', 'Besen']},
+  {emoji:'🪒', pl:'Maszynka do Golenia', en:'Razor', others:['shaver', 'blade', 'Rasierer']},
+  {emoji:'🩲', pl:'Majtki', en:'Underwear', others:['briefs', 'panties', 'Unterhose']},
+  {emoji:'🥼', pl:'Fartuch', en:'Apron', others:['white coat', 'Lab Coat', 'Kittel']},
+  {emoji:'🦺', pl:'Kamizelka Odblaskowa', en:'Safety Vest', others:['reflective vest', 'work vest', 'Warnweste']},
+  {emoji:'🎓', pl:'Czapka Dyplomowa', en:'Graduation Cap', others:['mortarboard', 'academic cap', 'Absolventenhut', 'cap']},
+  {emoji:'👑', pl:'Korona', en:'Crown', others:['tiara', 'royal crown', 'Krone']},
+  {emoji:'💍', pl:'Pierścionek', en:'Ring', others:['wedding ring', 'band', 'Ring']},
+  {emoji:'💄', pl:'Szminka', en:'Lipstick', others:['makeup', 'lip color', 'Lippenstift']},
+  {emoji:'🎒', pl:'Plecak', en:'Backpack', others:['rucksack', 'school bag', 'Rucksack']},
+  {emoji:'👝', pl:'Piórnik', en:'Pouch', others:['pencil case', 'small bag', 'Federmäppchen']},
+  {emoji:'👛', pl:'Portmonetka', en:'Purse', others:['coin purse', 'wallet', 'Geldbörse']},
+  {emoji:'👜', pl:'Torebka', en:'Handbag', others:['pocketbook', 'bag', 'Handtasche']},
+  {emoji:'🩴', pl:'Japonki', en:'Flip-Flops', others:['sandals', 'slippers', 'Flip-Flops', 'flip flops']},
+  {emoji:'👠', pl:'Szpilki', en:'High Heels', others:['stilettos', 'heels', 'High Heels']},
+  {emoji:'👟', pl:'But', en:'Sneaker', others:['running shoe', 'trainer', 'Turnschuh']},
+  {emoji:'🦯', pl:'Laska', en:'Cane', others:['walking stick', 'staff', 'Gehstock']}
+     ],
+     medium:[
+  {emoji:'🥾', pl:'But', en:'Boot', others:['hiking boot', 'work boot', 'Stiefel']},
+  {emoji:'👢', pl:'Kalosze', en:'Boots', others:['rain boots', 'wellies', 'Gummistiefel', 'boot']},
+  {emoji:'💰', pl:'Worek z Pieniędzmi', en:'Money Bag', others:['moneybag', 'sack of money', 'worek z pieniedzmi']},
+  {emoji:'💎', pl:'Diament', en:'Diamond', others:['diamont', 'gemstone', 'diament']},
+  {emoji:'🧻', pl:'Papier Toaletowy', en:'Toilet Paper', others:['bath tissue', 'tp roll', 'Toilettenpapier']},
+  {emoji:'🧽', pl:'Gąbka', en:'Sponge', others:['scrubber', 'cleaning sponge', 'Schwamm']},
+  {emoji:'🪥', pl:'Szczoteczka', en:'Toothbrush', others:['brush', 'dental brush', 'Zahnbürste']},
+  {emoji:'🧺', pl:'Koszyk', en:'Basket', others:['shopping basket', 'woven basket', 'Korb']},
+  {emoji:'🧦', pl:'Skarpetki', en:'Socks', others:['stockings', 'footwear', 'Socken']},
+  {emoji:'🧤', pl:'Rękawiczki', en:'Gloves', others:['mittens', 'handwear', 'Handschuhe']},
+  {emoji:'🧣', pl:'Szalik', en:'Scarf', others:['wrap', 'shawl', 'Schal']},
+  {emoji:'👖', pl:'Spodnie', en:'Pants', others:['trousers', 'jeans', 'Hose']},
+  {emoji:'🎽', pl:'Koszulka bez Rękawów', en:'Tank Top', others:['jersey', 'sleeveless shirt', 'Trikot']},
+  {emoji:'👔', pl:'Krawat', en:'Tie', others:['necktie', 'cravat', 'Krawatte', 'suit']},
+  {emoji:'👗', pl:'Sukienka', en:'Dress', others:['gown', 'frock', 'Kleid']},
+  {emoji:'🩳', pl:'Kąpielówki', en:'Shorts', others:['swim trunks', 'swim shorts', 'Badehose']},
+  {emoji:'🕶️', pl:'Okulary Przeciwsłoneczne', en:'Sunglasses', others:['shades', 'dark glasses', 'Sonnenbrille']},
+  {emoji:'🥽', pl:'Gogle', en:'Goggles', others:['protective glasses', 'safety goggles', 'Schutzbrille']},
+  {emoji:'👒', pl:'Kapelusz', en:'Hat', others:['sunhat', 'wide-brim hat', 'Hut']}
+     ],
+     hard:[
+  {emoji:'👓', pl:'Okulary', en:'Glasses', others:['spectacles', 'eyewear', 'Brille']},
+  {emoji:'🧢', pl:'Czapka', en:'Cap', others:['baseball cap', 'snapback', 'Mütze']},
+  {emoji:'⛑️', pl:'Hełm Strażacki', en:'Rescue Helmet', others:['fire helmet', 'safety helmet', 'Rettungshelm', 'helmet']},
+  {emoji:'🪖', pl:'Hełm Wojskowy', en:'Military Helmet', others:['army helmet', 'combat helmet', 'Militärhelm']},
+  {emoji:'🧥', pl:'Płaszcz', en:'Coat', others:['jacket', 'overcoat', 'Mantel']},
+  {emoji:'👕', pl:'Koszulka', en:'T-Shirt', others:['tee', 'shirt', 'T-Shirt']},
+  {emoji:'🧼', pl:'Mydło', en:'Soap', others:['bar soap', 'cleanser', 'Seife']},
+  {emoji:'🧴', pl:'Mydło', en:'Soap Bottle', others:['liquid soap', 'dispenser', 'Seifenspender', 'soap', 'bottle']},
+  {emoji:'🪟', pl:'Okno', en:'Window', others:['glass frame', 'house window', 'Fenster']},
+  {emoji:'🪞', pl:'Lustro', en:'Mirror', others:['looking glass', 'glass mirror', 'Spiegel']},
+  {emoji:'🚪', pl:'Drzwi', en:'Door', others:['gate', 'entry door', 'Tür']},
+  {emoji:'🪑', pl:'Krzesło', en:'Chair', others:['seat', 'wooden chair', 'Stuhl']},
+  {emoji:'🛏️', pl:'Łóżko', en:'Bed', others:['sleeping bed', 'bunk', 'Bett']},
+  {emoji:'🛋️', pl:'Kanapa', en:'Sofa', others:['couch', 'settee', 'Sofa']},
+  {emoji:'🚿', pl:'Prysznic', en:'Shower', others:['bath shower', 'sprinkler', 'Dusche']},
+  {emoji:'🛁', pl:'Wanna', en:'Bathtub', others:['bath', 'tub', 'Badewanne']},
+  {emoji:'🚽', pl:'Toaleta', en:'Toilet', others:['wc', 'restroom', 'Toilette']},
+  {emoji:'🧾', pl:'Paragon', en:'Receipt', others:['receit', 'payment slip', 'paragon']},
+  {emoji:'🔋', pl:'Bateria', en:'Battery', others:['batery', 'cell battery', 'bateria']},
+  {emoji:'🖲️', pl:'Myszka', en:'Trackball', others:['trackbal', 'computer ball', 'myszka', 'computer mouse', 'mouse']},
+  {emoji:'💽', pl:'Odtwarzacz Płyty', en:'Computer Disk', others:['diskette', 'disc drive', 'odtwarzacz plyty', "disc"]},
+  {emoji:'💾', pl:'Plik', en:'Floppy Disk', others:['flopy disk', 'disk file', 'plik', 'file']},
+  {emoji:'💿', pl:'Płyta CD', en:'CD', others:['cd disk', 'compact disc', 'plyta cd', 'disc']},
+  {emoji:'📀', pl:'Płyta DVD', en:'DVD', others:['dvdd', 'dvd disc', 'plyta dvd', 'disc']},
+  {emoji:'🖥️', pl:'Komputer', en:'Computer', others:['computr', 'desktop computer', 'komputer']},
+  {emoji:'💻', pl:'Laptop', en:'Laptop', others:['labtop', 'notebook', 'laptop']},
+  {emoji:'⌨️', pl:'Klawiatura', en:'Keyboard', others:['keybord', 'computer keyboard', 'klawiatura']},
+  {emoji:'🖨️', pl:'Drukarka', en:'Printer', others:['printter', 'laser printer', 'drukarka']},
+  {emoji:'🖱️', pl:'Myszka', en:'Computer Mouse', others:['mous', 'pc mouse', 'myszka', 'mouse']},
+  {emoji:'🪙', pl:'Moneta', en:'Coin', others:['coyn', 'currency coin', 'moneta']},
+  {emoji:'💸', pl:'Gotówka', en:'Cash', others:['cach', 'money cash', 'gotowka']},
+  {emoji:'💵', pl:'Dolar', en:'Dollar', others:['dollarr', 'us dollar', 'dolar', 'cash']},
+  {emoji:'💴', pl:'Jen', en:'Yen', others:['yen currency', 'japanese yen', 'jen', 'cash']},
+  {emoji:'💶', pl:'Euro', en:'Euro', others:['euroo', 'eu currency', 'euro', 'cash']},
+  {emoji:'💷', pl:'Funt', en:'Pound', others:['pund', 'british pound', 'funt', 'cash']},
+  {emoji:'💳', pl:'Karta Kredytowa', en:'Credit Card', others:['creditt card', 'bank card', 'karta kredytowa', 'card']},
+  {emoji:'📱', pl:'Telefon', en:'Phone', others:['fone', 'mobile phone', 'telefon']},
+  {emoji:'☎️', pl:'Telefon Stacjonarny', en:'Landline Phone', others:['landlne phone', 'desk phone', 'telefon stacjonarny', 'phone']},
+  {emoji:'📞', pl:'Słuchawka Telefoniczna', en:'Telephone Receiver', others:['reciever', 'phone receiver', 'sluchawka telefoniczna', 'phone']},
   {emoji:'🎹', pl:'Pianino', en:'Piano', others:['Keyboard', 'Grand Piano', 'Pianino']},
   {emoji:'🎷', pl:'Saksofon', en:'Saxophone', others:['Sax', 'Jazz Horn', 'Saksofon']},
   {emoji:'🎺', pl:'Trąbka', en:'Trumpet', others:['Horn', 'Brass Trumpet', 'Trabka']},
   {emoji:'🎸', pl:'Gitara', en:'Guitar', others:['Acoustic Guitar', 'Electric Guitar', 'Gitara']},
-  {emoji:'🪕', pl:'Banjo', en:'Banjo', others:['String Instrument', 'Bluegrass Banjo', 'Banjo']},
+  {emoji:'🪕', pl:'Banjo', en:'Banjo', others:['String Instrument', 'Bluegrass Banjo', 'Banjo', 'Guitar']},
   {emoji:'🎻', pl:'Skrzypce', en:'Violin', others:['Fiddle', 'String Violin', 'Skrzypce']},
-  {emoji:'🪘', pl:'Bęben', en:'Drum', others:['Hand Drum', 'Percussion Drum', 'Beben']},
-  {emoji:'🥁', pl:'Perkusja', en:'Drum Set', others:['Percussion', 'Drums', 'Perkusja']},
+  {emoji:'🪘', pl:'Bęben', en:'Drum', others:['Hand Drum', 'Percussion Drum', 'Beben', 'drums']},
+  {emoji:'🥁', pl:'Perkusja', en:'Drum Set', others:['Percussion', 'Drums', 'Perkusja', 'drum']},
   {emoji:'🪗', pl:'Akordeon', en:'Accordion', others:['Concertina', 'Piano Accordion', 'Akordeon']},
-  {emoji:'🎚️', pl:'Suwak Głośności', en:'Volume Slider', others:['Sound Fader', 'Audio Slider', 'Suwak Glosnosci']},
-  {emoji:'🎛️', pl:'Pokrętła Regulacyjne', en:'Control Knobs', others:['Sound Knobs', 'Audio Controls', 'Pokretla']},
-  {emoji:'🎙️', pl:'Mikrofon Studyjny', en:'Studio Microphone', others:['Recording Mic', 'Podcast Microphone', 'Mikrofon Studyjny']},
+  {emoji:'🎚️', pl:'Suwak Głośności', en:'Volume Slider', others:['Sound Fader', 'Audio Slider', 'Suwak Glosnosci', 'Volume', 'Slider']},
+  {emoji:'🎛️', pl:'Pokrętła Regulacyjne', en:'Control Knobs', others:['Sound Knobs', 'Audio Controls', 'Pokretla', 'Control', 'Knobs']},
+  {emoji:'🎙️', pl:'Mikrofon Studyjny', en:'Studio Microphone', others:['Recording Mic', 'Podcast Microphone', 'Mikrofon Studyjny', 'Microphone']},
   {emoji:'📺', pl:'Telewizor', en:'Television', others:['TV', 'Screen', 'Telewizor']},
   {emoji:'📼', pl:'Kaseta', en:'Cassette', others:['VHS Tape', 'Video Cassette', 'Kaseta']},
   {emoji:'🎬', pl:'Klaps Filmowy', en:'Clapperboard', others:['Movie Board', 'Film Slate', 'Klaps Filmowy']},
-  {emoji:'🎭', pl:'Maski Teatralne', en:'Theater Masks', others:['Drama Masks', 'Comedy and Tragedy', 'Maski Teatralne']},
+  {emoji:'🎭', pl:'Maski Teatralne', en:'Theater Masks', others:['Drama Masks', 'Comedy and Tragedy', 'Maski Teatralne', 'mask', 'masks']},
   {emoji:'🎫', pl:'Bilet', en:'Ticket', others:['Event Ticket', 'Admission Pass', 'Bilet']},
-     ],
-     medium:[
   {emoji:'🖼️', pl:'Obraz', en:'Framed Picture', others:['frame picture', 'framed art', 'obraz', 'picture']},
   {emoji:'📢', pl:'Megafon', en:'Loudspeaker', others:['loudspeeker', 'megaphone', 'megafon']},
-  {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe']},
+  {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe', 'railway tracks', 'tracks']},
   {emoji:'🎤', pl:'Mikrofon', en:'Microphone', others:['Mic', 'Stage Microphone', 'Mikrofon']},
   {emoji:'🎧', pl:'Słuchawki', en:'Headphones', others:['Earphones', 'Audio Headset', 'Sluchawki']},
-     ],
-     hard:[
   {emoji:'📻', pl:'Radio', en:'Radio', others:['FM Radio', 'Broadcast Receiver', 'Radio']},
   {emoji:'⛳', pl:'Pole Golfowe', en:'Golf Course', others:['golf corse', 'golf field', 'pole golfowe', 'golf']},
-  {emoji:'🎯', pl:'Tarcza', en:'Dartboard', others:['dart bord', 'target board', 'tarcza']},
+  {emoji:'🎯', pl:'Tarcza', en:'Dartboard', others:['dart bord', 'target board', 'tarcza', 'dart']},
   {emoji:'🏹', pl:'Łuk', en:'Bow', others:['boww', 'archery bow', 'luk']},
   {emoji:'🪃', pl:'Bumerang', en:'Boomerang', others:['bommerang', 'throwing stick', 'bumerang']},
   {emoji:'🪁', pl:'Latawiec', en:'Kite', others:['kight', 'flying kite', 'latawiec']},
@@ -157,19 +246,19 @@
   {emoji:'🤿', pl:'Maska do Nurkowania', en:'Diving Mask', others:['divin mask', 'snorkel mask', 'okulary do pływania', 'mask', 'diving']},
   {emoji:'🥋', pl:'Strój Karate', en:'Karate Uniform', others:['karatte uniform', 'martial arts gi', 'stroj karate', 'karate', 'uniform']},
   {emoji:'🥊', pl:'Rękawica Bokserska', en:'Boxing Glove', others:['boxin glove', 'boxing mitt', 'rekawica bokserska', 'box', 'boxing', 'glove']},
-  {emoji:'🎱', pl:'Bilard', en:'Billiards', others:['bilards', 'pool ball', 'bilard']},
+  {emoji:'🎱', pl:'Bilard', en:'Billiards', others:['bilards', 'pool ball', 'bilard', 'billiard ball']},
   {emoji:'🎮', pl:'Pad', en:'Game Controller', others:['game controlller', 'gaming pad', 'pad', 'game pad', 'controller']},
   {emoji:'🔫', pl:'Pistolet na Wodę', en:'Water Gun', others:['watergn', 'squirt gun', 'pistolet na wode']},
   {emoji:'🎲', pl:'Kostka', en:'Dice', others:['dise', 'game dice', 'kostka']},
   {emoji:'🃏', pl:'Karta', en:'Card', others:['playin card', 'joker card', 'karta', 'Playing Card']},
   {emoji:'🪄', pl:'Różdżka', en:'Wand', others:['magic wond', 'Magic Wand', 'rozdzka']},
   {emoji:'🎩', pl:'Cylinder', en:'Top Hat', others:['top hatt', 'gentleman hat', 'kapelusz', 'hat']},
-  {emoji:'🎨', pl:'Paleta', en:'Artist Palette', others:['art pallete', 'paint palette', 'paleta', 'palette']},
-  {emoji:'🖌️', pl:'Pędzel', en:'Paintbrush', others:['paint brus', 'art brush', 'pedzel']},
+  {emoji:'🎨', pl:'Paleta', en:'Artist Palette', others:['art pallete', 'paint palette', 'paleta', 'palette', 'paint', 'paints']},
+  {emoji:'🖌️', pl:'Pędzel', en:'Paintbrush', others:['paint brus', 'art brush', 'pedzel', 'brush']},
   {emoji:'🖍️', pl:'Kredka', en:'Crayon', others:['crayon', 'wax crayon', 'kredkaa']},
   {emoji:'🪡', pl:'Igła', en:'Needle', others:['nedle', 'sewing needle', 'igla']},
-  {emoji:'🧵', pl:'Nitka', en:'Thread', others:['thred', 'sewing thread', 'nitka']},
-  {emoji:'🧶', pl:'Wełna', en:'Yarn', others:['yarnn', 'wool yarn', 'welna']},
+  {emoji:'🧵', pl:'Nitka', en:'Thread', others:['thred', 'sewing thread', 'nitka', 'filament']},
+  {emoji:'🧶', pl:'Wełna', en:'Yarn', others:['yarnn', 'wool yarn', 'welna', 'wool', 'fleece', 'pile']},
   {emoji:'🪀', pl:'Jojo', en:'Yo-Yo', others:['yo yo', 'yo-yo toy', 'jojo', 'yoyo']},
   {emoji:'🕹️', pl:'Dżojstik', en:'Joystick', others:['joy stik', 'game joystick', 'dzojstik']},
   {emoji:'🎀', pl:'Kokarda', en:'Bow', others:['boow', 'ribbon bow', 'kokarda']},
@@ -291,7 +380,7 @@
   {emoji:'🚙', pl:'Samochód', en:'Car', others:['carr', 'family car', 'samochod']},
   {emoji:'🍹', pl:'Koktajl', en:'Cocktail', others:['coctel', 'fruit cocktail', 'koktajl']},
   {emoji:'🥣', pl:'Miska', en:'Bowl', others:['bolw', 'soup bowl', 'miska']},
-  {emoji:'🥤', pl:'Słomka', en:'Straw', others:['staw', 'drinking straw', 'slomka']},
+  {emoji:'🥤', pl:'Słomka', en:'Straw', others:['staw', 'drinking straw', 'slomka', 'glass']},
   {emoji:'🍽️', pl:'Talerz', en:'Plate', others:['plait', 'dinner plate', 'talerz']},
   {emoji:'🚌', pl:'Autobus', en:'Bus', others:['buss', 'public bus', 'autobus']},
   {emoji:'🚂', pl:'Lokomotywa', en:'Locomotive', others:['locomotiv', 'steam engine', 'lokomotywa']},
