--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250908_pozytywizm.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1757358985/pozytywizm_bpgemq.png" alt="Pozytywizm">
+                <span>Pozytywizm</span>
+            </a>
             <a href="20250906_rower.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1757160349/rower100km_mku99b.png" alt="100 km">
                 <span>100 km</span>
