--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -12,29 +12,29 @@
     <div class="container">
 <h1>Dawid</h1>
         <div class="buttons">
-            <a href="mediumemotik.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
-                <span>Emotki</span>
-            </a>
             <a href="testy.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
                 <span>Testy</span>
             </a>
-            <a href="20250812_emotkiflagi.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
-                <span>Flagi</span>
+            <a href="20250901_szkola.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
+                <span>Szkoła 3</span>
             </a>
-            <a href="20250809_ufo.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
-                <span>Ufo</span>
+            <a href="mediumemotik.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
+                <span>Emotki</span>
             </a>
             <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
             </a>
-            <a href="20250901_szkola.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
-                <span>Szkoła 3</span>
+            <a href="20250908_pozytywizm.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1757358985/pozytywizm_bpgemq.png" alt="Pozytywizm">
+                <span>Pozytywizm</span>
+            </a>
+            <a href="20250812_emotkiflagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
+                <span>Flagi</span>
             </a>
             <a href="gry.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
